@startuml
' Define interfaces for the Observer pattern
interface Observer {
}

interface Subject {
}

' Define concrete classes for the Observer pattern
class WaitStaffObserver {
}

class KitchenStaffObserver {
}

class OrderSubject implements Subject {
}

class OrderItemSubject implements Subject {
}

' Define interfaces and classes for the State pattern for MenuItems
interface ItemState {
}

class Queueing implements ItemState {
}

class Cooking implements ItemState {
}

class Cooked implements ItemState {
}

class Served implements ItemState {
}

class OrderItemContext {
}

class MenuItem {
}

' Define user roles
abstract User {
}

class KitchenStaff {
}

class WaitStaff {
}

class Manager {
}

class RegularUser {
}

' Define Singleton for Analytics
class Analytics {
}

class OrderFactory {
}

interface OrderState {
}

class Reserving implements OrderState {
}

class Serving implements OrderState {
}

class Paying implements OrderState {
}

class Paid implements OrderState {
}

' Composite pattern relations for user
User <|-- WaitStaff
User <|-- KitchenStaff
User <|-- Manager
User <|-- RegularUser

Analytics <-up- Manager

' Link WaitStaff to creating OrderItem
RegularUser -down-> OrderFactory : Uses

OrderFactory -down-> Order : Creates

Order -down-> OrderItemContext : contains

' Link users to Observer roles
WaitStaffObserver -up-|> WaitStaff
KitchenStaffObserver -up-|> KitchenStaff
WaitStaffObserver .down.|> Observer
KitchenStaffObserver .down.|> Observer

' Link Subject to Observers explicitly
OrderSubject "1" -up-> "*" Observer : notifies >
OrderItemSubject "1" -up-> "*" Observer : notifies >

' Connect the menu items to the order and states
OrderItemContext -left-> ItemState
OrderItemContext -right-> OrderItemSubject
OrderItemContext --> OrderItem: contains

OrderItem -down-> MenuItem : include

Order --> OrderItem : contains

Order -right-> OrderSubject


Order -left-> OrderState

Order -down-> Receipt : for

@enduml
